vpc/vpc.tf
resource "aws_vpc" "ecs1-vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = "true"
  
  tags {
    Name = "${local.tag_prefix}"
  }
}

output "id" {
  value = "${aws_vpc.ecs1-vpc.id}"
}
